--- a/WeatherAppSUI/Info.plist
+++ b/WeatherAppSUI/Info.plist
@@ -4,8 +4,10 @@
 <dict>
 	<key>UILaunchScreen</key>
 	<dict>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<false/>
 		<key>UIImageName</key>
-		<string>BackgroundImage</string>
+		<string>LaunchImage</string>
 	</dict>
 </dict>
 </plist>
